--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>  Landing Page </title>
+	<title>  Snap 36 IRCE </title>
 	<link rel="stylesheet" type="text/css" href="index.css"  media="all">
 </head>
 <body>
