--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 </head>
 <body>
 
-	<div style="text-align: left;"><img style="width: 100%; height: 15%; display: block; margin-left: auto; margin-right: auto;" src="http://cdn2.hubspot.net/hub/29492/file-705818670-jpg/TradeShows/IR_B2B/landingpagehead.jpg" alt="landingpagehead" width="741"></div>
+	<div style="text-align: left;"><img style="width: 100%; height: 15%; display: block; margin-left: auto; margin-right: auto;" src="http://cdn2.hubspot.net/hub/29492/file-705818670-jpg/TradeShows/IR_B2B/landingpagehead.jpg" alt="landingpagehead" width="15%"></div>
 
 	<br>
 	<br>
 	<br>
 
 
-	<div position="relative" padding-bottom="56.25%" padding-top="35px" height="0" overflow="hidden"><iframe src="http://is.shotfarm.com/embed.php?v=63517" width="100%" height="100%" frameborder="0" scrolling="no"></iframe></div>
+	<div position="relative"><iframe src="http://is.shotfarm.com/embed.php?v=63517" width="100%" height="100%" frameborder="0" scrolling="no"></iframe></div>
 		    <br />
 		    <br />
 	</div>
 
-		<div><img style="width: 400px; float: right; margin: 75px 0px 0px 20px;" src="http://cdn2.hubspot.net/hub/29492/file-704215607-png/Banners/WeGetAround.png" alt="WeGetAround" width="400" align="right"></div>
+		<div><img style="width: 20%; float: right;" src="http://cdn2.hubspot.net/hub/29492/file-704215607-png/Banners/WeGetAround.png" alt="WeGetAround" width="400" align="right"></div>
 
 	</div>
 
