--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 	<br>
 
 
-	<div position="relative"><iframe src="http://is.shotfarm.com/embed.php?v=63517" width="100%" height="100%" frameborder="0" scrolling="no"></iframe></div>
+	<div position="relative"><iframe src="http://is.shotfarm.com/embed.php?v=63517" width="60%" height="50%" frameborder="0" scrolling="no"></iframe></div>
 		    <br />
 		    <br />
 	</div>
 
-		<div><img style="width: 20%; float: right;" src="http://cdn2.hubspot.net/hub/29492/file-704215607-png/Banners/WeGetAround.png" alt="WeGetAround" width="400" align="right"></div>
+		<div><img style="width: 20%; float: right;" src="http://cdn2.hubspot.net/hub/29492/file-704215607-png/Banners/WeGetAround.png" alt="WeGetAround" width="20%" align="right"></div>
 
 	</div>
 
