--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<br>
 
 
-	<div position="relative"><iframe src="http://is.shotfarm.com/embed.php?v=63517" width="60%" height="50%" frameborder="0" scrolling="no"></iframe></div>
+	<div position="relative" align="center"><iframe src="http://is.shotfarm.com/embed.php?v=63517" width="60%" height="50%" frameborder="0" scrolling="no"></iframe></div>
 		    <br />
 		    <br />
 	</div>
